# cyberdeck

./: .gitignore  BUGFIXES.md  BUGS.md  BUG_FINDINGS.md  PERFORMANCE_WINS.md  README.md  TODO_BUGS.md  renovate.json
net/crates/net/: .env.example  .gitignore  BENCHMARKS.md  BENCHMARK_RESULTS_14900K.md  BENCHMARK_RESULTS_M1_MAX.md  BENCHMAR_RESULTS_14900K.md  BUGS.md  BUGS_2.md  BUGS_3.md  BUGS_4.md  C_SDK_PLAN.md  Cargo.toml  LAYER1_PLAN.md  LAYER2_PLAN.md  LAYER3_PLAN.md  LAYER4_PLAN.md  LAYER5_PLAN.md  LAYER7_PLAN.md  LAYER8_PLAN.md  LIQUID_COMPUTE.md  LIQUID_COMPUTE_PLAN.md  PYTHON_SDK_PLAN.md  README.md  RUST_SDK_PLAN.md  TS_SDK_PLAN.md
net/crates/net/.github/workflows/: ci.yml  release-npm.yml  release-python.yml
net/crates/net/benches/: auth_guard.rs  bltp.rs  cortex.rs  ingestion.rs  mesh.rs  net.rs  nltp.rs  parallel.rs  redex.rs
net/crates/net/benchmarks/: BENCHMARK_RESULTS_14900K.md  parse_criterion.py
net/crates/net/bindings/go/: README.md
net/crates/net/bindings/go/blackstream/: benchmark_test.go  blackstream.go  blackstream.h  go.mod  integration_test.go
net/crates/net/bindings/go/compute-ffi/: Cargo.toml
net/crates/net/bindings/go/example/: go.mod  main.go
net/crates/net/bindings/go/net/: abi_stability_cgo.go  abi_stability_cgo_test.go  abi_stability_test.go  capabilities.go  capabilities_test.go  compute.go  compute_dispatch.go  compute_dispatch_bridge.c  compute_test.go  cortex.go  cortex_test.go  go.mod  groups.go  groups_test.go  identity.go  identity_test.go  integration_test.go  mesh.go  mesh_channels_test.go  mesh_test.go  migration.go  net.go  (+7 more)
net/crates/net/bindings/node/: .npmignore  Cargo.toml  errors.d.ts  errors.js  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
net/crates/net/bindings/python/: Cargo.toml  README.md  pyproject.toml
net/crates/net/docs/: AUTO_REROUTE_PLAN.md  BEHAVIOR.md  BUG_130_HORIZON_BLOOM_PLAN.md  BUG_56_57_AT_LEAST_ONCE_DEDUP_PLAN.md  BUG_AUDIT_2026_04_30.md  BUG_AUDIT_2026_04_30_CORE.md  BUG_REPORT.md  CAPABILITY_BROADCAST_PLAN.md  CHANNELS.md  CHANNEL_AUTH_GUARD_PLAN.md  CHANNEL_PUBLISHER_PLAN.md  CODE_REVIEW_2026_05_01_BUGFIXES_7.md  COMPUTE.md  CONTESTED.md  CONTINUITY.md  CORTEX_ADAPTER_PLAN.md  FAILURE_PATH_HARDENING_PLAN.md  HANDSHAKE_RELAY_PLAN.md  HEARTBEAT_UNIFICATION_PLAN.md  IDENTITY.md  MESH_NODE_PLAN.md  MIGRATION_KEY_TRANSFER_PLAN.md  MIGRATION_LIFECYCLE_PLAN.md  MULTIHOP_CAPABILITY_PLAN.md  MULTI_HOP_HANDSHAKE_RELAY_PLAN.md  MULTI_HOP_ROUTING_PLAN.md  NAT_TRAVERSAL_PLAN.md  NETDB_PLAN.md  PERFORMANCE_WINS_PLAN.md  PORT_MAPPING_PLAN.md  REDEX_DISK_THROUGHPUT_PLAN.md  REDEX_PLAN.md  REDEX_SCHEDULER_PLAN.md  RELEASE_v0.8_KILLING_MOON.md  RELEASE_v0.9_KILLING_MOON_PHASE_II.md  ROUTING_DV_PLAN.md  SCOPED_CAPABILITIES_PLAN.md  SCOPED_CAPABILITY_ANNOUNCEMENTS_PLAN.md  SDK_COMPUTE_SURFACE_PLAN.md  SDK_EXPANSION_PLAN.md  (+13 more)
net/crates/net/docs/misc/: BUG_104_LOCAL_MIGRATION_PLAN.md  BUG_148_PIGGYBACK_APP_SEQ_PLAN.md  BUG_153_154_STRANDED_FLUSH_PLAN.md  BUG_AUDIT_2026_04_30.md  BUG_AUDIT_2026_05_02.md  BUG_AUDIT_2026_05_03.md  REVIEW_BUGFIXES_8_2026_05_02.md
net/crates/net/examples/: basic.c  mesh_demo.rs
net/crates/net/fuzz/: .gitignore  Cargo.toml
net/crates/net/fuzz/fuzz_targets/: capability_announcement_from_bytes.rs  migration_wire_decode.rs  nat_pmp_decode_response.rs  routing_header_from_bytes.rs  snapshot_reassembler_feed.rs
net/crates/net/include/: README.md  net.h
net/crates/net/sdk/: Cargo.toml  README.md
net/crates/net/sdk-py/: README.md  pyproject.toml
net/crates/net/sdk-py/tests/: conftest.py  test_channel_subscribe_opts.py
net/crates/net/sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
net/crates/net/sdk-ts/src/: _internal.ts  capabilities.ts  channel.ts  compute.ts  cortex.ts  groups.ts  identity.ts  index.ts  mesh.ts  node.ts  redis-dedup.ts  stream.ts  subnets.ts  types.ts
net/crates/net/sdk-ts/test/: capabilities.test.ts  channel_auth.test.ts  channels.test.ts  compute.test.ts  cortex.test.ts  groups.test.ts  identity.test.ts  redex.test.ts  redis-dedup.test.ts  stream.bench.ts  subnets.test.ts
net/crates/net/sdk/examples/: backpressure.rs  bench.rs  channels.rs  hello.rs  stream.rs
net/crates/net/sdk/src/: capabilities.rs  compute.rs  config.rs  cortex.rs  error.rs  identity.rs  lib.rs  mesh.rs  net.rs  redis_dedup.rs  stream.rs  subnets.rs
net/crates/net/sdk/tests/: compute_channel_rebind.rs  compute_migration.rs  compute_runtime.rs  cortex_surface.rs  groups_surface.rs  mesh_channels.rs  mesh_nat_traversal.rs  mesh_port_mapping.rs  mesh_stream_backpressure.rs  redis_dedup_contract.rs  shutdown_regression.rs
net/crates/net/src/: bus.rs  config.rs  error.rs  event.rs  lib.rs  timestamp.rs
net/crates/net/src/adapter/: dedup_state.rs  jetstream.rs  mod.rs  noop.rs  redis.rs  redis_dedup.rs
net/crates/net/src/consumer/: filter.rs  merge.rs  mod.rs
net/crates/net/src/ffi/: cortex.rs  mesh.rs  mod.rs  redis_dedup.rs
net/crates/net/src/shard/: batch.rs  mapper.rs  mod.rs  ring_buffer.rs
net/crates/net/tests/: bus_shutdown_drain.rs  bus_stranded_flush.rs  capability_broadcast.rs  capability_multihop.rs  capability_scope.rs  channel_auth.rs  channel_auth_hardening.rs  connect_direct.rs  connect_post_start.rs  failure_detector_matrix.rs  ffi_poll_buffer.rs  ffi_shutdown_race.rs  integration_bltp.rs  integration_cortex_adapter.rs  integration_cortex_memories.rs  integration_cortex_tasks.rs  integration_jetstream.rs  integration_net.rs  integration_netdb.rs  integration_nltp.rs  integration_redex.rs  integration_redis.rs  loom_models.rs  migration_integration.rs  migration_target_failure_mid_chunking.rs  nat_classify.rs  parallel_bind_stress.rs  peer_death_clears_capability_index.rs  peer_death_evicts_peer_map.rs  port_mapping_null.rs  port_mapping_real_router.rs  punch_keepalive.rs  punch_keepalive_timing.rs  reflex_override.rs  reflex_probe.rs  rendezvous_ack.rs  rendezvous_coordinator.rs  send_subprotocol_malformed.rs  subnet_enforcement.rs  three_node_integration.rs
net/crates/net/tests/common/: mod.rs
(+397 files in other folders)
