[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "net-sdk"
version = "0.1.0"
description = "Ergonomic Python SDK for the Net mesh network"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["net>=0.5.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
keywords = ["net", "mesh", "event-bus", "streaming", "ai", "llm", "inference"]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
test = ["pytest>=9.0.0"]

[project.urls]
Homepage = "https://github.com/ai-2070/cyberdeck"
Repository = "https://github.com/ai-2070/cyberdeck"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
