[package]
name = "net-sdk"
version = "0.1.0"
edition = "2021"
description = "Ergonomic Rust SDK for the Net mesh network"
license = "Apache-2.0"

[dependencies]
net = { path = "..", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "time", "sync"] }
pin-project-lite = "0.2"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[features]
default = []
# External transports (opt-in, network I/O).
redis = ["net/redis"]
jetstream = ["net/jetstream"]
# Core mesh transport (encrypted UDP + subprotocols).
net = ["net/net"]
# CortEX adds the typed event-sourced adapters (tasks + memories) plus
# the NetDb facade. `redex-disk` comes along so `.persistent(true)` is
# usable from the SDK without a separate feature flip.
cortex = ["net/netdb", "net/redex-disk"]
# Security surface — identity (keypairs + tokens), capability
# declarations, and subnet assignment. Each depends on the SDK's own
# `net` feature so a change to what `net` enables propagates
# automatically; the underlying core types live in `adapter::net`.
identity = ["net"]
capabilities = ["net"]
subnets = ["net"]
# Common-case bundle: enable the whole security surface at once.
security = ["identity", "capabilities", "subnets"]
# Everything that runs locally (mesh + storage/state + security, no
# external transports). The default shape for a single-node or
# LAN-only deployment.
local = ["net", "cortex", "security"]
# Everything — local stack plus external transports.
full = ["local", "redis", "jetstream"]
