[package]
name = "net-sdk"
version = "0.1.0"
edition = "2021"
description = "Ergonomic Rust SDK for the Net mesh network"
license = "Apache-2.0"

[dependencies]
net = { path = "..", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "time", "sync"] }
pin-project-lite = "0.2"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }

[features]
default = []
# External transports (opt-in, network I/O).
redis = ["net/redis"]
jetstream = ["net/jetstream"]
# Core mesh transport (encrypted UDP + subprotocols). Bundles the
# identity, capabilities, and subnet surfaces — they all live behind
# `adapter::net` in core and are operationally inseparable (subnet
# enforcement reuses the capability-announcement dispatch; channel
# auth uses identity + capabilities + subnets together), so exposing
# them as separate SDK flags created pick-your-own-subset
# combinations that weren't actually meaningful.
net = ["net/net"]
# CortEX adds the typed event-sourced adapters (tasks + memories) plus
# the NetDb facade. `redex-disk` comes along so `.persistent(true)` is
# usable from the SDK without a separate feature flip.
cortex = ["net/netdb", "net/redex-disk"]
# Compute surface — `MeshDaemon` trait + `DaemonRuntime` for local
# spawn / snapshot / stop. Requires `net` because daemons have a
# mesh identity (ed25519 keypair + origin_hash) that rides on the
# same `Identity` the channel-auth path uses.
compute = ["net"]
# HA / scaling overlays — `ReplicaGroup` / `ForkGroup` /
# `StandbyGroup`. Sits on top of `compute`; a caller with just
# `compute` gets single-daemon spawn / snapshot / migration, and
# `groups` adds the N-member coordination primitives on top.
groups = ["compute"]
# Everything that runs locally (mesh + storage/state + security +
# compute + groups, no external transports). The default shape for
# a single-node or LAN-only deployment.
local = ["net", "cortex", "compute", "groups"]
# Everything — local stack plus external transports.
full = ["local", "redis", "jetstream"]
