[package]
name = "net-node"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Node.js bindings for Net event bus"

[lib]
crate-type = ["cdylib"]

[features]
default = ["redis"]
redis = ["net/redis"]
jetstream = ["net/jetstream"]
net = ["net/net", "dep:hex"]
cortex = ["net/netdb", "net/redex-disk"]
# Identity surface — ed25519 keypair + permission tokens. The
# underlying types live in `adapter::net::identity`, gated by the
# core's `net` feature, so this feature depends on ours.
identity = ["net"]

[dependencies]
net = { path = "../..", default-features = false }
napi = { version = "3.7.0", default-features = false, features = ["napi4", "napi6", "async", "tokio_rt"] }
napi-derive = "3.4.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
serde_json = "1.0.145"
bytes = "1.11.0"
arc-swap = "1.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hex = { version = "0.4", optional = true }

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
