[package]
name = "net-node"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "Node.js bindings for Net event bus"

[lib]
# `rlib` is needed alongside `cdylib` so in-crate `#[cfg(test)] mod
# tests` blocks can run (cargo requires rlib to link the unit-test
# harness). Publishing still ships the `.node` cdylib; the rlib is
# a build artifact only.
crate-type = ["cdylib", "rlib"]

[features]
default = ["redis"]
# Pulls in `net-sdk` at its `redis` sub-feature for the
# `RedisStreamDedup` consumer helper (BUG #57). The redis feature
# was originally just `net/redis`; the SDK dep is added here so the
# dedup helper is a thin NAPI wrapper around the canonical Rust
# implementation rather than a re-implementation.
#
# Cubic-ai P2: pre-fix the `[dependencies]` declaration of
# `net-sdk` had `features = ["compute"]` baked in, so any feature
# that activated `dep:net-sdk` (including this `redis` feature)
# transitively compiled the entire compute surface — daemons,
# migration, replica/fork/standby groups — into the cdylib of a
# Redis-only consumer build. Fixed by clearing the baseline
# features on the dep and having each Node feature opt-in
# explicitly via its own `net-sdk/<sub>` activation below.
redis = ["net/redis", "dep:net-sdk", "net-sdk/redis"]
jetstream = ["net/jetstream"]
# Core mesh transport. Bundles the identity, capabilities, and
# subnet surfaces — they share `adapter::net`'s subprotocol dispatch
# and are operationally inseparable (subnet enforcement reuses the
# capability broadcast; channel auth uses all three together), so
# separate NAPI flags would only enable combinations that don't
# actually work end-to-end.
net = ["net/net", "dep:hex"]
# NAT traversal — reflex probes, classification, rendezvous-
# coordinated hole-punch, and the stats surface. Exposed as
# optional on the NAPI class (methods return a typed Traversal
# error with stable `kind` discriminator when invoked; none of
# the existing surface changes). Framing (plan §5): traversal
# is an optimization, not a connectivity requirement. See the
# `NAT_TRAVERSAL_PLAN.md` top-of-doc framing rules.
nat-traversal = ["net", "net/nat-traversal"]
# Port mapping — opportunistic UPnP-IGD / NAT-PMP / PCP at
# startup. Exposes `tryPortMapping?: boolean` on `MeshOptions`.
# Builds on `nat-traversal`.
port-mapping = ["nat-traversal", "net/port-mapping"]
cortex = ["net/netdb", "net/redex-disk"]
# Compute surface — `DaemonRuntime`, `MeshDaemon`, migration. Stage 3
# of SDK_COMPUTE_SURFACE_PLAN. Depends on `net` (mesh transport is
# what daemons ride) and brings in `net-sdk` at its `compute` feature
# for the already-shipped Rust surface. `dashmap` is added here
# because the compute module keeps a `kind -> TSFN` map that needs
# concurrent access without serializing the whole NAPI runtime.
#
# Cubic-ai P2: explicitly forwards `net-sdk/compute` so the SDK's
# compute code only compiles when this feature is active. Pre-fix
# the dep declaration's `features = ["compute"]` baseline pulled
# it in for every other feature too.
compute = ["net", "dep:net-sdk", "net-sdk/compute", "dep:dashmap"]
# HA / scaling overlays — `ReplicaGroup` / `ForkGroup` / `StandbyGroup`.
# Follows `SDK_GROUPS_SURFACE_PLAN.md`. Sits on top of `compute`.
# Forwards to `net-sdk/groups` so the SDK groups surface is only
# pulled into the build when this flag is set — a `compute`-only
# build doesn't compile the groups code.
groups = ["compute", "net-sdk/groups"]
# Test-only helpers (`testInjectSyntheticPeer`, etc.). Gated
# separately so enabling `groups` alone does NOT export test-only
# APIs to production JS consumers. The vitest suite builds with
# `--features groups,test-helpers`; release / consumer builds stop
# at `--features groups`.
test-helpers = ["groups"]

[dependencies]
net = { path = "../..", default-features = false }
net-sdk = { path = "../../sdk", default-features = false, optional = true }
dashmap = { version = "6", optional = true }
napi = { version = "3.7.0", default-features = false, features = ["napi4", "napi6", "async", "tokio_rt"] }
napi-derive = "3.4.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
serde_json = "1.0.145"
bytes = "1.11.0"
arc-swap = "1.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hex = { version = "0.4", optional = true }

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
