[package]
name = "net-python"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for Net event bus"

[lib]
name = "_net"
crate-type = ["cdylib"]

[features]
default = ["redis", "net"]
redis = ["net/redis"]
jetstream = ["net/jetstream"]
net = ["net/net", "dep:hex"]
cortex = ["net/cortex-tasks", "net/cortex-memories"]

[dependencies]
net = { path = "../..", default-features = false }
pyo3 = { version = "0.28.0", features = ["extension-module"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
serde_json = "1.0.145"
bytes = "1.11.0"
hex = { version = "0.4", optional = true }

[build-dependencies]
pyo3-build-config = "0.28.0"

[profile.release]
lto = true
