[package]
name = "net-python"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for Net event bus"

[lib]
name = "_net"
# `rlib` is needed alongside `cdylib` so in-crate `#[cfg(test)] mod
# tests` blocks compile — cargo requires rlib to link the unit-test
# harness. The published Python wheel still ships the `.so/.dylib`
# cdylib; the rlib is a build artifact only.
crate-type = ["cdylib", "rlib"]

[features]
default = ["redis", "net"]
redis = ["net/redis"]
jetstream = ["net/jetstream"]
net = ["net/net", "dep:hex"]
# NAT traversal — reflex probes, classification, rendezvous-
# coordinated hole-punch, and the stats surface. Exposes
# `nat_type`, `reflex_addr`, `probe_reflex`, `reclassify_nat`,
# `traversal_stats`, and `connect_direct` on `NetMesh`. Off by
# default — the routed-handshake path reaches every peer
# regardless of this feature. Framing (plan §5): traversal is
# an optimization, not a connectivity requirement.
nat-traversal = ["net", "net/nat-traversal"]
cortex = ["net/netdb", "net/redex-disk"]
# Stage 5 of `SDK_COMPUTE_SURFACE_PLAN.md` — Python surface for
# the `MeshDaemon` / migration runtime. Requires the `net` feature
# (for `NetMesh`) + the net-sdk compute feature.
compute = ["net", "dep:net-sdk", "dep:dashmap"]
# Stage 3 of `SDK_GROUPS_SURFACE_PLAN.md` — HA/scaling overlays
# (ReplicaGroup, ForkGroup, StandbyGroup). Sits on top of compute.
groups = ["compute"]

[dependencies]
net = { path = "../..", default-features = false }
net-sdk = { path = "../../sdk", optional = true, features = ["net", "compute", "groups"] }
dashmap = { version = "6", optional = true }
pyo3 = { version = "0.28.0", features = ["extension-module"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
serde_json = "1.0.145"
bytes = "1.11.0"
hex = { version = "0.4", optional = true }

[build-dependencies]
pyo3-build-config = "0.28.0"

[profile.release]
lto = true
