[package]
name = "net-python"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for Net event bus"

[lib]
name = "_net"
# `rlib` is needed alongside `cdylib` so in-crate `#[cfg(test)] mod
# tests` blocks compile — cargo requires rlib to link the unit-test
# harness. The published Python wheel still ships the `.so/.dylib`
# cdylib; the rlib is a build artifact only.
crate-type = ["cdylib", "rlib"]

[features]
default = ["redis", "net"]
# Pulls in `net-sdk` at its `redis` sub-feature for the
# `RedisStreamDedup` consumer helper (BUG #57). The redis feature
# was originally just `net/redis`; the SDK dep is added here so
# the dedup helper is a thin PyO3 wrapper around the canonical
# Rust implementation.
#
# Cubic-ai P2 (parallel to the Node binding fix): pre-fix the
# `[dependencies]` declaration of `net-sdk` had
# `features = ["net", "compute", "groups"]` baked in, so enabling
# this `redis` feature transitively compiled the entire net +
# compute + groups surface into a Redis-only consumer build.
# Fixed by clearing the baseline features on the dep and having
# each Python feature opt in explicitly via its own `net-sdk/<sub>`
# activation below.
redis = ["net/redis", "dep:net-sdk", "net-sdk/redis"]
jetstream = ["net/jetstream"]
net = ["net/net", "dep:hex"]
# NAT traversal — reflex probes, classification, rendezvous-
# coordinated hole-punch, and the stats surface. Exposes
# `nat_type`, `reflex_addr`, `probe_reflex`, `reclassify_nat`,
# `traversal_stats`, and `connect_direct` on `NetMesh`. Off by
# default — the routed-handshake path reaches every peer
# regardless of this feature. Framing (plan §5): traversal is
# an optimization, not a connectivity requirement.
nat-traversal = ["net", "net/nat-traversal"]
# Port mapping — opportunistic UPnP / NAT-PMP / PCP. Exposes
# `try_port_mapping=None` as a `NetMesh.__init__` kwarg. Builds
# on `nat-traversal`.
port-mapping = ["nat-traversal", "net/port-mapping"]
cortex = ["net/netdb", "net/redex-disk"]
# Stage 5 of `SDK_COMPUTE_SURFACE_PLAN.md` — Python surface for
# the `MeshDaemon` / migration runtime. Requires the `net` feature
# (for `NetMesh`) + the net-sdk compute feature.
#
# Cubic-ai P2: explicitly forwards `net-sdk/compute` so the SDK's
# compute code only compiles when this feature is active. Pre-fix
# the dep declaration's baseline features pulled it in for every
# feature.
compute = ["net", "dep:net-sdk", "net-sdk/compute", "dep:dashmap"]
# Stage 3 of `SDK_GROUPS_SURFACE_PLAN.md` — HA/scaling overlays
# (ReplicaGroup, ForkGroup, StandbyGroup). Sits on top of compute.
groups = ["compute", "net-sdk/groups"]

[dependencies]
net = { path = "../..", default-features = false }
net-sdk = { path = "../../sdk", default-features = false, optional = true }
dashmap = { version = "6", optional = true }
pyo3 = { version = "0.28.0", features = ["extension-module"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
serde_json = "1.0.145"
bytes = "1.11.0"
hex = { version = "0.4", optional = true }

[build-dependencies]
pyo3-build-config = "0.28.0"

[profile.release]
lto = true
